1、收藏页 2、搜索页 3、视频页

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -47,6 +47,9 @@
       },
       "login": {
         "component": "index"
+      },
+      "search": {
+        "component": "index"
       }
     }
   },
