--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
-  "package": "com.quickapp.demo",
+  "package": "com.news.demo",
   "name": "快应用",
   "versionName": "1.0.0",
-  "versionCode": "1",
+  "versionCode": "2",
   "minPlatformVersion": "101",
   "icon": "/common/logo.png",
   "features": [
