--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "package": "com.news.demo",
-  "name": "快应用",
+  "name": "预感浏览器",
   "versionName": "1.0.0",
-  "versionCode": "2",
+  "versionCode": "3",
   "minPlatformVersion": "101",
   "icon": "/common/logo.png",
   "features": [
