--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "package": "com.news.demo",
+  "package": "com.broswer.demo",
   "name": "预感浏览器",
   "versionName": "1.0.0",
   "versionCode": "3",
@@ -34,30 +34,30 @@
     "logLevel": "debug"
   },
   "router": {
-    "entry": "home",
+    "entry": "pages/home",
     "pages": {
-      "home": {
+      "pages/home": {
         "component": "index"
       },
-      "detail": {
+      "pages/detail": {
         "component": "index"
       },
-      "video": {
+      "pages/video": {
         "component": "index"
       },
-      "collect": {
+      "pages/collect": {
         "component": "index"
       },
-      "user": {
+      "pages/user": {
         "component": "index"
       },
-      "login": {
+      "pages/login": {
         "component": "index"
       },
-      "search": {
+      "pages/search": {
         "component": "index"
       },
-      "frame": {
+      "pages/frame": {
         "component": "index"
       }
     }
