页面：下载列表、历史记录、设置 交互：添加收藏、立即分享、无痕模式、小说模式

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,6 +23,9 @@
     },
     {
       "name": "system.webview"
+    },
+    {
+      "name": "system.storage"
     }
   ],
   "permissions": [
@@ -58,6 +61,15 @@
         "component": "index"
       },
       "pages/frame": {
+        "component": "index"
+      },
+      "pages/download": {
+        "component": "index"
+      },
+      "pages/history": {
+        "component": "index"
+      },
+      "pages/setting": {
         "component": "index"
       }
     }
