隐私政策、关于我们

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -71,6 +71,12 @@
       },
       "pages/setting": {
         "component": "index"
+      },
+      "pages/about": {
+        "component": "index"
+      },
+      "pages/privacy": {
+        "component": "index"
       }
     }
   },
