--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
-  "package": "com.broswer.demo",
+  "package": "com.news.demo",
   "name": "预感浏览器",
   "versionName": "1.0.0",
-  "versionCode": "3",
+  "versionCode": "4",
   "minPlatformVersion": "101",
   "icon": "/common/logo.png",
   "features": [
