--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
-  "package": "com.news.demo",
-  "name": "预感浏览器",
-  "versionName": "1.0.0",
-  "versionCode": "5",
+  "package": "com.yugan.browser",
+  "name": "感感浏览器",
+  "versionName": "1.0.2",
+  "versionCode": "2",
   "minPlatformVersion": "1010",
   "icon": "/common/logo.png",
   "features": [
